--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#mySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/paschoalini
+spring.datasource.username=root
+spring.datasource.password=root
 
+#Data Config
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
